from typing import Dict, List
from domain import Domain
from meem_problem import MEEM_problem

class MEEM_engine:
    """
    Class to manage and solve multiple MEEM_problem instances.

    Attributes:
        problem_list (Dict[str, MEEM_problem]): A list of MEEM_problem instances.
    """

    def __init__(self, problem_list: Dict[str, MEEM_problem]):
        """
        Initializes the MEEM_engine class.

        Args:
            problem_list (Dict[str, MEEM_problem]): A list of problems to manage.
        """
        self.problem_list = problem_list

    def linear_solve_Ax_b(self, matrix, vector):
        """
        Solves a linear system of equations Ax = b.

        Args:
            matrix (Matrix): The system's coefficient matrix.
            vector (Vector): The known values or forcing terms.

        Returns:
            Vector: The solution vector x.
        """
        pass

    def assemble_A(self, problem: MEEM_problem):
        """
        Assembles the matrix A for a given MEEM_problem.

        Args:
            problem (MEEM_problem): The problem for which the matrix is assembled.

        Returns:
            Matrix: The assembled matrix.
        """
        pass

    def assemble_b(self, problem: MEEM_problem):
        """
        Assembles the vector b for a given MEEM_problem.

        Args:
            problem (MEEM_problem): The problem for which the vector is assembled.

        Returns:
            Vector: The assembled vector.
        """
        pass

    def coupling_integral(self, domain1: Domain, domain2: Domain) -> float:
        """
        Calculates the coupling integral between two domains.

        Args:
            domain1 (Domain): The first domain.
            domain2 (Domain): The second domain.

        Returns:
            float: The value of the coupling integral.
        """
        pass

    def visualize(self):
        """
        Visualizes the results of the MEEM_problem solutions.
        """
        pass

    def perform_matching(self, domain_matches: Dict[str, Dict[str, bool]]) -> bool:
        """
        Performs domain matching based on the provided match data.

        Args:
            domain_matches (Dict[str, Dict[str, bool]]): A dictionary of domain matches.

        Returns:
            bool: True if matching is successful, False otherwise.
        """
        pass
