# meem_problem.py

from typing import Dict
from geometry import Geometry
import numpy as np

class MEEMProblem:
    """
    Represents a mathematical problem to be solved using the Multiple Expansion Eigenfunction Method (MEEM).
    """

    def __init__(self, geometry: Geometry):
        """
        Initialize the MEEMProblem object.

        :param geometry: Geometry object containing domain information.
        """
        self.domain_list = geometry.domain_list
        self.geometry = geometry
        self.frequencies = np.array([])  # Initialize with empty arrays
        self.modes = np.array([])

    def set_frequencies_modes(self, frequencies: np.ndarray, modes: np.ndarray):
        """
        Set the frequencies and modes for the problem.
        """
        self.frequencies = frequencies
        self.modes = modes


    # Add any additional methods required for multi-region computations
